<resources>
    <string name="app_name">ProyectoPoliAyudaME</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="logoapplication">logoApplication</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="recordarme">Recordarme</string>
    <string name="registrarse">Registrarse</string>
    <string name="txt_ingresaDatos">Por favor ingresa tus datos</string>
    <string name="nombre">Nombre</string>
    <string name="ingresa_tu_nombre_de_usuario">Ingresa tu nombre de usuario</string>
    <string name="email">Email</string>
    <string name="ingresa_tu_email">Ingresa tu email</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
    <string name="estoy_de_acuerdo_con_los_t_rminos_y_condiciones">Estoy de acuerdo con los términos y condiciones</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="ingresar">Ingresar</string>
    <string name="title_activity_ver_pregunta">VerPreguntaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_ver_pregunta2">VerPreguntaActivity2</string>
    <string name="títuloPregunta">Lorem Ipsum</string>
    <string name="fechaSubida">05/05/2022</string>
    <string name="materiaMatematica">Matemática</string>
    <string name="ejemploPregunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus massa magna, venenatis at libero at, auctor euismod neque.</string>
    <string name="botónAgregarImagen">Agregar Imágen</string>
    <string name="botonPublicar">Publicar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escribirRespuesta">Escribe tu respuesta</string>
    <string name="escribirRespuestaIngreso">Escribe algo...</string>
    <string name="otrasRespuestas">Respuestas</string>
    <string name="tituloAgregarPregunta">Agregar Pregunta</string>
    <string name="titulo">Inserte título</string>
    <string name="escribeTuPregunta">Escribe tu pregunta:</string>
    <string name="descartarPregunta">Descartar</string>
    <string name="busqueda">Buscar...</string>
    <string name="tituloRespuestapregunta">Lorem Ipsum</string>
    <string name="responderBoton">Responder</string>
    <string name="responder">Responder</string>
    <string name="textViewUsuario">Usuario1</string>
    <string name="textViewNombre">Nombre:</string>
    <string name="textViewValorNombre">Victor Velepucha</string>
    <string name="txtViewCorreo">E-mail:</string>
    <string name="txtViewValorCorreo">victor.velepucha@epn.edu.ec</string>
    <string name="textViewPuntos">Puntos</string>
    <string name="textviewPreguntasHechas">Preguntas hechas</string>
    <string name="textViewPreguntasContestadas">Preguntas Contestadas</string>
    <string name="txtViewPremiosObtenidos">Premios Obtenidos</string>
    <string name="txtValor">75</string>
    <string name="txtPreguntasValor">5</string>
    <string name="txtValorPreguntasRespondidas">5</string>
    <string name="txtViewPuntosDisponibles">Puntos Disponibles</string>
    <string name="textViewCuadernosFEPON">Cuaderno 100 hojas</string>
    <string name="textViewCuadernosFEPONU">Chompa PolyStyle FEPON</string>
    <string name="textViewCuadernosFEPONA">1 hora Billard FEPON</string>
    <string name="textView">200 pts</string>
    <string name="txtViewsPts1">200</string>
    <string name="txtViewsPts2">150</string>
    <string name="txtViewsPts3">100</string>
    <string name="btnCanjear">Canjear</string>
    <string name="inicio">Inicio</string>
    <string name="mis_preguntas">Mis Preguntas</string>
    <string name="mis_respuestas">Mis respuestas</string>
    <string name="canje">Canje</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="todo">Todo</string>
    <string name="matem_tica">Matemática</string>
    <string name="f_sica">Física</string>
    <string name="qu_mica">Química</string>
    <string name="geometr_a">Geometría</string>
    <string name="escoga_tipo">Escoga la materia de la pregunta.</string>
    <string name="pregunta">Pregunta</string>
    <string name="reclamado">Reclamado con exito</string>
</resources>