<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F9F8"
    android:backgroundTint="#F4F9F8">

    <TextView
        android:id="@+id/textViewTítulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/títuloPregunta"
        android:textColor="#072D4B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="20sp"
        android:text="@string/usuario"
        android:textColor="#546E7A"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTítulo" />

    <TextView
        android:id="@+id/textViewFechaSubida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fechaSubida"
        android:textColor="#66072D4B"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewMateria"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toEndOf="@+id/textViewUsuario"
        app:layout_constraintTop_toBottomOf="@+id/textViewTítulo" />

    <TextView
        android:id="@+id/textViewMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/materiaMatematica"
        android:textColor="#072D4B"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewUsuario"
        app:layout_constraintTop_toBottomOf="@+id/textViewTítulo" />

    <TextView
        android:id="@+id/textViewCuerpoPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:text="@string/ejemploPregunta"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsuario" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView4"
        android:layout_width="377sp"
        android:layout_height="146sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:circularflow_defaultRadius="8sp"
        app:circularflow_radiusInDP="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEscribirRespuesta"
        tools:layout="@layout/fragment_responer_pregunta">

    </androidx.fragment.app.FragmentContainerView>

    <TextView
        android:id="@+id/textViewEscribirRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/escribirRespuesta"
        android:textColor="#072D4B"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCuerpoPregunta" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/otrasRespuestas"
        android:textColor="#072D4B"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView4" />

</androidx.constraintlayout.widget.ConstraintLayout>