<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo"
    android:padding="28dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/logoapplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoapp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="328dp"

        android:layout_height="314dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.354">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="username"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/usuario"
            android:inputType="text"
            android:labelFor="@+id/etMail"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/color_secundario" />

        <EditText
            android:id="@+id/etContra"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="password"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:labelFor="@+id/etContra"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/color_secundario" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/outfit_regular"
            android:minHeight="48dp"
            android:text="@string/recordarme"
            android:textColor="@color/color_secundario"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/color_principal"
            android:fontFamily="@font/outfit_regular"
            android:shadowColor="@color/black"
            android:text="@string/iniciar_sesi_n"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/custom_button"
            android:text="@string/registrarse"
            android:fontFamily="@font/outfit_regular"
            android:textAllCaps="false"
            android:textColor="@color/color_principal"
            android:textSize="18sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>