<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F9F8"
    android:backgroundTint="#F4F9F8"
    tools:context=".ActivityAnadirPregunta">

    <TextView
        android:id="@+id/textViewTtituloAgregarPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tituloAgregarPregunta"
        android:textColor="#072D4B"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="60dp" />

    <EditText
        android:id="@+id/editTextTextTítuloPregunta"
        android:layout_width="360dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/dark_header"
        android:backgroundTint="#F1F1F1"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="8sp"
        android:paddingEnd="8sp"
        android:text="@string/titulo"
        android:textColor="#939397"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTtituloAgregarPregunta" />

    <TextView
        android:id="@+id/textViewTítuloEscribeTuPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/escribeTuPregunta"
        android:textColor="#072D4B"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTítuloPregunta" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView5"
        android:layout_width="377sp"
        android:layout_height="146sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:circularflow_defaultRadius="8sp"
        app:circularflow_radiusInDP="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTítuloEscribeTuPregunta"
        tools:layout="@layout/fragment_escribir_pregunta">
    </androidx.fragment.app.FragmentContainerView>

    <Button
        android:id="@+id/buttonDescartarPregunta"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FF4D4B"
        android:inputType="textCapSentences"
        android:paddingLeft="0sp"
        android:paddingTop="0sp"
        android:paddingRight="0sp"
        android:paddingBottom="0sp"
        android:text="@string/descartarPregunta"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView5" />
</androidx.constraintlayout.widget.ConstraintLayout>